--- a/exercises-content/Express_25.4/client/index.html
+++ b/exercises-content/Express_25.4/client/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <nav id="nav"></nav>
   <div id="content"></div>
   <script src="./main.js"></script>
 </body>
