criado rota /users/:name/:id conformeespecificado no requisito 4, testado pelo httpie

--- a/exercises/Express_25.4/client/index.html
+++ b/exercises/Express_25.4/client/index.html
@@ -58,6 +58,13 @@
     <code id="hello2"></code>
     <button id="btn-hello2">Saudação</button>
   </div>
+  <div class="center">
+    <p>4 - Crie uma rota PUT /users/:name/:age</p>
+    <label>Digite seu nome: <input type="text" id="user-name3" /></label>
+    <label>Digite sua idade: <input type="text" id="user-age2" /></label>
+    <code id="hello3"></code>
+    <button id="btn-hello3">Saudação</button>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
