implementado para que o cliente no browser aicionasse um personagem do simpsons testando o methodo post no browser do dia 25.4

--- a/exercises/Express_25.4/simponsClient/index.html
+++ b/exercises/Express_25.4/simponsClient/index.html
@@ -17,6 +17,15 @@
     flex-grow: 1;
    }
 
+   input {
+     margin: 5px;
+   }
+
+   label {
+     width: 60%;
+     margin: 20px 0;
+   }
+
     #content {
       display: flex;
       flex-wrap: wrap;
